[package]
name = "hdqtsp-lehmer"
version = "0.2.0"
edition = "2021"
description = "Hybrid DAG Quantum TSP Solver v6.2 — Lehmer-Enhanced Rust/WASM Edition"
authors = ["Amir Hameed Mir <amir@sirraya.org>"]
license = "MIT"
repository = "https://github.com/sirraya/hdqtsp"
keywords = ["tsp", "quantum", "optimization", "wasm", "lehmer"]
categories = ["algorithms", "science", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]
name = "hdqtsp_lehmer"

[dependencies]
# WASM binding
wasm-bindgen = "0.2"
js-sys = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Linear algebra
nalgebra = "0.32"

# Random number generation
rand = "0.8"

# Parallel processing (optional)
rayon = { version = "1.8", optional = true }

# WASM allocator for smaller binary
wee_alloc = "0.4"

[features]
default = []
parallel = ["rayon"]

[profile.release]
# Optimize for size (important for WASM)
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0